[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://Sounds/01 Kevin MacLeod - Impact Prelude.mp3" type="AudioStream" id=2]
[ext_resource path="res://OptionsMenuPopup.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/swordguy.png" type="Texture" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Swordguy" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 528.0
margin_right = 192.0
margin_bottom = 596.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 192.0
margin_bottom = 20.0
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 192.0
margin_bottom = 44.0
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 192.0
margin_bottom = 68.0
text = "Quit"

[node name="OptionsMenuPopup" parent="." instance=ExtResource( 3 )]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true
bus = "Music"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
